--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <div class="col-12">
             <h1 class="hero-head">
               সম্ভাবনার নতুন দুয়ার খুলুন <br />
-              আমাদের সাথে
+              <span style="color: #dd0000">আমাদের সাথে</span>
             </h1>
           </div>
         </div>
@@ -129,9 +129,6 @@
               </div>
               <div class="col-lg text-center mb-4">
                 <div class="quick-service-card">
-                  <!-- <a href="https://www.codenextit.com/">
-                                    <span class="link"></span>
-                                </a> -->
                   <img src="./img/software-icon.png" alt="" class="mb-3" />
                   <h5>সফটওয়্যার</h5>
                   <div class="quick-service-border-circle">
