--- a/portfolio.html
+++ b/portfolio.html
@@ -458,9 +458,71 @@
                   <div class="col-lg-4">
                     <div class="portfolio-card-list">
                       <img src="./img/portfolio/portfolio-web-dev-card-01.png" alt="" class="portfolio-card-img">
+                      <p>The Ultrasound Source</p>
+                      <div class="portfolio-card-list-btn">
+                        <a href="https://theultrasoundsource.com/" target="_blank">Live Preview</a>
+                        <a href="#" class="portfolio-card-view-btn" data-bs-toggle="modal"
+                          data-bs-target="#exampleModal">View More</a>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="modal modal-xl fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="exampleModalLabel">The Ultrasound Source</h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                          <img src="/img/portfolio/screencapture-codenextit-2022-12-29-18_46_26.png">
+                        </div>
+                        <div class="modal-footer">
+                          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor id odit fuga debitis quo
+                            nobis sint quam nostrum minus neque.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-4">
+                    <div class="portfolio-card-list">
+                      <img src="./img/portfolio/portfolio-web-dev-card-02.png" alt="" class="portfolio-card-img">
+                      <p>Pabna Online</p>
+                      <div class="portfolio-card-list-btn">
+                        <a href="https://pabnaonline.net/" target="_blank">Live Preview</a>
+                        <a href="#" class="portfolio-card-view-btn" data-bs-toggle="modal"
+                          data-bs-target="#exampleModal">View More</a>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="modal modal-xl fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="exampleModalLabel">Pabna Online</h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                          <img src="/img/portfolio/screencapture-codenextit-2022-12-29-18_46_26.png">
+                        </div>
+                        <div class="modal-footer">
+                          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor id odit fuga debitis quo
+                            nobis sint quam nostrum minus neque.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-4">
+                    <div class="portfolio-card-list">
+                      <img src="./img/portfolio/portfolio-web-dev-card-03.png" alt="" class="portfolio-card-img">
                       <p>Grow Pins</p>
                       <div class="portfolio-card-list-btn">
-                        <a href="https://theultrasoundsource.com/">Live Preview</a>
+                        <a href="http://growpins.com/" target="_blank">Live Preview</a>
                         <a href="#" class="portfolio-card-view-btn" data-bs-toggle="modal"
                           data-bs-target="#exampleModal">View More</a>
                       </div>
@@ -485,41 +547,12 @@
                       </div>
                     </div>
                   </div>
+                </div>
 
+                <div class="row portfolio-cards-item">
                   <div class="col-lg-4">
                     <div class="portfolio-card-list">
-                      <img src="./img/portfolio/portfolio-web-dev-card-02.png" alt="" class="portfolio-card-img">
-                      <p>Puzzle Bazar</p>
-                      <div class="portfolio-card-list-btn">
-                        <a href="https://theultrasoundsource.com/">Live Preview</a>
-                        <a href="#" class="portfolio-card-view-btn" data-bs-toggle="modal"
-                          data-bs-target="#exampleModal">View More</a>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="modal modal-xl fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <h5 class="modal-title" id="exampleModalLabel">Puzzle Bazar</h5>
-                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                          <img src="/img/portfolio/screencapture-codenextit-2022-12-29-18_46_26.png">
-                        </div>
-                        <div class="modal-footer">
-                          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor id odit fuga debitis quo
-                            nobis sint quam nostrum minus neque.</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col-lg-4">
-                    <div class="portfolio-card-list">
-                      <img src="./img/portfolio/portfolio-web-dev-card-03.png" alt="" class="portfolio-card-img">
+                      <img src="./img/portfolio/portfolio-web-dev-card-04.png" alt="" class="portfolio-card-img">
                       <p>Mercedes Blue</p>
                       <div class="portfolio-card-list-btn">
                         <a href="https://theultrasoundsource.com/">Live Preview</a>
@@ -547,197 +580,38 @@
                       </div>
                     </div>
                   </div>
+
+                  <div class="col-lg-4">
+                    <div class="portfolio-card-list">
+                      <img src="./img/portfolio/portfolio-web-dev-card-05.png" alt="" class="portfolio-card-img">
+                      <p>Puzzle Bazaar BD</p>
+                      <div class="portfolio-card-list-btn">
+                        <a href="https://puzzlebazaarbd.com/" target="_blank">Live Preview</a>
+                        <a href="#" class="portfolio-card-view-btn" data-bs-toggle="modal"
+                          data-bs-target="#exampleModal">View More</a>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="modal modal-xl fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="exampleModalLabel">Puzzle Bazaar BD</h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                          <img src="/img/portfolio/screencapture-codenextit-2022-12-29-18_46_26.png">
+                        </div>
+                        <div class="modal-footer">
+                          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor id odit fuga debitis quo
+                            nobis sint quam nostrum minus neque.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-
-                <div class="row portfolio-cards-item">
-                  <div class="col-lg-4">
-                    <div class="portfolio-card-list">
-                      <img src="./img/portfolio/portfolio-web-dev-card-04.png" alt="" class="portfolio-card-img">
-                      <p>The Ultrasound</p>
-                      <div class="portfolio-card-list-btn">
-                        <a href="https://theultrasoundsource.com/">Live Preview</a>
-                        <a href="#" class="portfolio-card-view-btn" data-bs-toggle="modal"
-                          data-bs-target="#exampleModal">View More</a>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="modal modal-xl fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <h5 class="modal-title" id="exampleModalLabel">The Ultrasound Source</h5>
-                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                          <img src="/img/portfolio/screencapture-codenextit-2022-12-29-18_46_26.png">
-                        </div>
-                        <div class="modal-footer">
-                          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor id odit fuga debitis quo
-                            nobis sint quam nostrum minus neque.</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <!-- <div class="col-lg-4">
-                    <div class="portfolio-card-list">
-                      <img src="./img/portfolio/portfolio-card-2.png" alt="" class="portfolio-card-img">
-                      <p>The Ultrasound</p>
-                      <div class="portfolio-card-list-btn">
-                        <a href="https://theultrasoundsource.com/">Live Preview</a>
-                        <a href="#" class="portfolio-card-view-btn" data-bs-toggle="modal"
-                          data-bs-target="#exampleModal">View More</a>
-                      </div>
-                    </div>
-                  </div> -->
-
-                  <!-- <div class="modal modal-xl fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <h5 class="modal-title" id="exampleModalLabel">The Ultrasound Source</h5>
-                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                          <img src="/img/portfolio/screencapture-codenextit-2022-12-29-18_46_26.png">
-                        </div>
-                        <div class="modal-footer">
-                          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor id odit fuga debitis quo
-                            nobis sint quam nostrum minus neque.</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div> -->
-
-                  <!-- <div class="col-lg-4">
-                    <div class="portfolio-card-list">
-                      <img src="./img/portfolio/portfolio-card-2.png" alt="" class="portfolio-card-img">
-                      <p>The Ultrasound</p>
-                      <div class="portfolio-card-list-btn">
-                        <a href="https://theultrasoundsource.com/">Live Preview</a>
-                        <a href="#" class="portfolio-card-view-btn" data-bs-toggle="modal"
-                          data-bs-target="#exampleModal">View More</a>
-                      </div>
-                    </div>
-                  </div> -->
-
-                  <!-- <div class="modal modal-xl fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <h5 class="modal-title" id="exampleModalLabel">The Ultrasound Source</h5>
-                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                          <img src="/img/portfolio/screencapture-codenextit-2022-12-29-18_46_26.png">
-                        </div>
-                        <div class="modal-footer">
-                          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor id odit fuga debitis quo
-                            nobis sint quam nostrum minus neque.</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div> -->
-                </div>
-
-                <!-- <div class="row portfolio-cards-item">
-                  <div class="col-lg-4">
-                    <div class="portfolio-card-list">
-                      <img src="./img/portfolio/portfolio-card-2.png" alt="" class="portfolio-card-img">
-                      <p>The Ultrasound</p>
-                      <div class="portfolio-card-list-btn">
-                        <a href="https://theultrasoundsource.com/">Live Preview</a>
-                        <a href="#" class="portfolio-card-view-btn" data-bs-toggle="modal"
-                          data-bs-target="#exampleModal">View More</a>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="modal modal-xl fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <h5 class="modal-title" id="exampleModalLabel">The Ultrasound Source</h5>
-                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                          <img src="/img/portfolio/screencapture-codenextit-2022-12-29-18_46_26.png">
-                        </div>
-                        <div class="modal-footer">
-                          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor id odit fuga debitis quo
-                            nobis sint quam nostrum minus neque.</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col-lg-4">
-                    <div class="portfolio-card-list">
-                      <img src="./img/portfolio/portfolio-card-2.png" alt="" class="portfolio-card-img">
-                      <p>The Ultrasound</p>
-                      <div class="portfolio-card-list-btn">
-                        <a href="https://theultrasoundsource.com/">Live Preview</a>
-                        <a href="#" class="portfolio-card-view-btn" data-bs-toggle="modal"
-                          data-bs-target="#exampleModal">View More</a>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="modal modal-xl fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <h5 class="modal-title" id="exampleModalLabel">The Ultrasound Source</h5>
-                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                          <img src="/img/portfolio/screencapture-codenextit-2022-12-29-18_46_26.png">
-                        </div>
-                        <div class="modal-footer">
-                          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor id odit fuga debitis quo
-                            nobis sint quam nostrum minus neque.</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col-lg-4">
-                    <div class="portfolio-card-list">
-                      <img src="./img/portfolio/portfolio-card-2.png" alt="" class="portfolio-card-img">
-                      <p>The Ultrasound</p>
-                      <div class="portfolio-card-list-btn">
-                        <a href="https://theultrasoundsource.com/">Live Preview</a>
-                        <a href="#" class="portfolio-card-view-btn" data-bs-toggle="modal"
-                          data-bs-target="#exampleModal">View More</a>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="modal modal-xl fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <h5 class="modal-title" id="exampleModalLabel">The Ultrasound Source</h5>
-                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                          <img src="/img/portfolio/screencapture-codenextit-2022-12-29-18_46_26.png">
-                        </div>
-                        <div class="modal-footer">
-                          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor id odit fuga debitis quo
-                            nobis sint quam nostrum minus neque.</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div> -->
               </div>
 
               <div class="tab-pane fade" id="graphics" role="tabpanel" aria-labelledby="graphics-tab">
