--- a/web-hosting.html
+++ b/web-hosting.html
@@ -346,9 +346,9 @@
                         <p>আমাদের সহায়তা ও সহায়তা কেন্দ্রের সাথে সার্বক্ষণিক সংযোগ পেতে একটি সমর্থন টিকিট তৈরি করুন বা
                             লাইভ চ্যাট বোতামে চাপ দিন!</p>
                         <p><b>ইমার্জেন্সি?</b> সিঙ্গেল সেশনের জন্য আমাদের কল করুন!</p>
-                        <p class="faq-contact"><span><i class="fa-solid fa-phone"></i></span>০১৭৮৮-৪২৮২৮০</p>
-                        <p class="faq-contact"><span><i
-                                    class="fa-solid fa-circle-info"></i></span>hosting@codenextit.com</p>
+                        <a href="tel:+8801788428280"><p class="faq-contact"><span><i class="fa-solid fa-phone"></i></span>০১৭৮৮-৪২৮২৮০</p></a>
+                        <a href="mailto:hosting@codenextit.com"><p class="faq-contact"><span><i
+                                    class="fa-solid fa-circle-info"></i></span>hosting@codenextit.com</p></a>
                     </div>
                 </div>
                 <div class="col-lg-5">
