--- a/about.html
+++ b/about.html
@@ -202,10 +202,13 @@
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
                 <a href="#">
-                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a href="#">
                   <i class="fa-brands fa-linkedin"></i>
+                </a>
+                <a href="#">
+                  <i class="fa-brands fa-github"></i>
                 </a>
               </div>
             </div>
@@ -224,10 +227,13 @@
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
                 <a href="#">
-                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a href="#">
                   <i class="fa-brands fa-linkedin"></i>
+                </a>
+                <a href="#">
+                  <i class="fa-brands fa-github"></i>
                 </a>
               </div>
             </div>
@@ -246,7 +252,7 @@
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
                 <a href="#">
-                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a href="#">
                   <i class="fa-brands fa-linkedin"></i>
@@ -265,18 +271,21 @@
               </div>
               <div class="teams-social">
                 <a
-                  href="https://www.facebook.com/profile.php?id=100055058377971"
+                  href="https://www.facebook.com/rahat.malitha"
                 >
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
                 <a href="#">
-                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a
                   href="https://www.linkedin.com/in/rahat-cnits-82177a258/
                 "
                 >
                   <i class="fa-brands fa-linkedin"></i>
+                </a>
+                <a href="#">
+                  <i class="fa-brands fa-github"></i>
                 </a>
               </div>
             </div>
@@ -294,14 +303,17 @@
                 <p>ওয়েব ডিজাইনার</p>
               </div>
               <div class="teams-social">
-                <a href="#">
+                <a href="https://www.facebook.com/profile.php?id=100088819157588">
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
                 <a href="#">
-                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a href="#">
                   <i class="fa-brands fa-linkedin"></i>
+                </a>
+                <a href="#">
+                  <i class="fa-brands fa-github"></i>
                 </a>
               </div>
             </div>
@@ -322,10 +334,13 @@
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
                 <a href="#">
-                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a href="#">
                   <i class="fa-brands fa-linkedin"></i>
+                </a>
+                <a href="#">
+                  <i class="fa-brands fa-behance"></i>
                 </a>
               </div>
             </div>
@@ -344,10 +359,13 @@
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
                 <a href="#">
-                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a href="#">
                   <i class="fa-brands fa-linkedin"></i>
+                </a>
+                <a href="#">
+                  <i class="fa-brands fa-behance"></i>
                 </a>
               </div>
             </div>
@@ -366,10 +384,13 @@
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
                 <a href="#">
-                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a href="#">
                   <i class="fa-brands fa-linkedin"></i>
+                </a>
+                <a href="#">
+                  <i class="fa-brands fa-behance"></i>
                 </a>
               </div>
             </div>
