--- a/about.html
+++ b/about.html
@@ -198,13 +198,13 @@
                 <p>প্রতিষ্ঠাতা ও এম.ডি</p>
               </div>
               <div class="teams-social">
-                <a href="https://www.facebook.com/ismailhossainnaiem">
+                <a href="https://www.facebook.com/ismailhossainnaiem" target="_blank">
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
                 <a href="#">
                   <i class="fa-brands fa-instagram"></i>
                 </a>
-                <a href="#">
+                <a href="https://www.linkedin.com/in/engr-md-ismail-hossain-a707ab216/" target="_blank">
                   <i class="fa-brands fa-linkedin"></i>
                 </a>
                 <a href="#">
