--- a/portfolio.html
+++ b/portfolio.html
@@ -153,7 +153,7 @@
                 <div class="row portfolio-cards-item">
                   <div class="col-lg-4">
                     <div class="portfolio-card-list">
-                      <img src="./img/portfolio/portfolio-card-2.png" alt="" class="portfolio-card-img">
+                      <img src="./img/portfolio/portfolio-web-dev-card-02.png" alt="" class="portfolio-card-img">
                       <p>The Ultrasound</p>
                       <div class="portfolio-card-list-btn">
                         <a href="https://theultrasoundsource.com/">Live Preview</a>
@@ -615,6 +615,12 @@
               </div>
 
               <div class="tab-pane fade" id="graphics" role="tabpanel" aria-labelledby="graphics-tab">
+
+                <!-- <div class="row">
+                  <div class="graphics-logo-header">
+                    <h3>Logo</h3>
+                  </div>
+                </div> -->
 
                 <div class="row portfolio-cards-item">
                   <div class="col-lg-4">
