--- a/web-hosting.html
+++ b/web-hosting.html
@@ -145,7 +145,7 @@
                             <p><i class="fa-solid fa-plus"></i>50 MBps IO</p>
                             <p><i class="fa-solid fa-plus"></i>10 Gbps BDIX & NIX</p>
                             <div class="package-btn d-flex">
-                                <a href="#" class="m-auto">
+                                <a href="https://zeeroow.com/services/aff.php?aff=1" class="m-auto">
                                     <span></span>
                                     <span></span>
                                     <span></span>
@@ -173,7 +173,7 @@
                             <p><i class="fa-solid fa-plus"></i>50 MBps IO</p>
                             <p><i class="fa-solid fa-plus"></i>10 Gbps BDIX & NIX</p>
                             <div class="package-btn package-phyco-btn d-flex">
-                                <a href="#" class="m-auto">
+                                <a href="https://zeeroow.com/services/aff.php?aff=1" class="m-auto">
                                     <span></span>
                                     <span></span>
                                     <span></span>
@@ -201,7 +201,7 @@
                             <p><i class="fa-solid fa-plus"></i>50 MBps IO</p>
                             <p><i class="fa-solid fa-plus"></i>10 Gbps BDIX & NIX</p>
                             <div class="package-btn d-flex">
-                                <a href="#" class="m-auto">
+                                <a href="https://zeeroow.com/services/aff.php?aff=1" class="m-auto">
                                     <span></span>
                                     <span></span>
                                     <span></span>
