--- a/about.html
+++ b/about.html
@@ -198,21 +198,28 @@
                 <p>প্রতিষ্ঠাতা ও এম.ডি</p>
               </div>
               <div class="teams-social">
-                <a href="https://www.facebook.com/ismailhossainnaiem" target="_blank">
+                <a
+                  href="https://www.facebook.com/ismailhossainnaiem"
+                  target="_blank"
+                >
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
-                <a href="#">
+                <a href="#" target="_blank">
                   <i class="fa-brands fa-instagram"></i>
                 </a>
-                <a href="https://www.linkedin.com/in/engr-md-ismail-hossain-a707ab216/" target="_blank">
+                <a
+                  href="https://www.linkedin.com/in/engr-md-ismail-hossain-a707ab216/"
+                  target="_blank"
+                >
                   <i class="fa-brands fa-linkedin"></i>
                 </a>
-                <a href="#">
+                <a href="#" target="_blank">
                   <i class="fa-brands fa-github"></i>
                 </a>
               </div>
             </div>
           </div>
+
           <div class="col-lg-3">
             <div class="teams-card">
               <div class="teams-image">
@@ -223,21 +230,31 @@
                 <p>সহ-প্রতিষ্ঠাতা ও ওয়েব ডেভেলপার</p>
               </div>
               <div class="teams-social">
-                <a href="https://www.facebook.com/solar.eclipse.1">
+                <a href="https://www.facebook.com/imtiaz.cnits" target="_blank">
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
-                <a href="#">
+                <a
+                  href="https://www.instagram.com/imtiaz.ahmed.80/"
+                  target="_blank"
+                >
                   <i class="fa-brands fa-instagram"></i>
                 </a>
-                <a href="#">
+                <a
+                  href="https://www.linkedin.com/in/imtiaz-ahmed-5b1b1071/"
+                  target="_blank"
+                >
                   <i class="fa-brands fa-linkedin"></i>
                 </a>
-                <a href="#">
+                <a href="https://github.com/imtiazahmed80" target="_blank">
                   <i class="fa-brands fa-github"></i>
+                </a>
+                <a href="https://www.behance.net/imtiazahmed20" target="_blank">
+                  <i class="fa-brands fa-behance"></i>
                 </a>
               </div>
             </div>
           </div>
+
           <div class="col-lg-3">
             <div class="teams-card">
               <div class="teams-image">
@@ -248,18 +265,19 @@
                 <p>চীফ এডমিন অফিসার</p>
               </div>
               <div class="teams-social">
-                <a href="https://www.facebook.com/annisamth">
+                <a href="https://www.facebook.com/annisamth" target="_blank">
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
-                <a href="#">
+                <a href="#" target="_blank">
                   <i class="fa-brands fa-instagram"></i>
                 </a>
-                <a href="#">
+                <a href="#" target="_blank">
                   <i class="fa-brands fa-linkedin"></i>
                 </a>
               </div>
             </div>
           </div>
+
           <div class="col-lg-3">
             <div class="teams-card">
               <div class="teams-image">
@@ -272,19 +290,21 @@
               <div class="teams-social">
                 <a
                   href="https://www.facebook.com/rahat.malitha"
+                  target="_blank"
                 >
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
-                <a href="#">
+                <a href="#" target="_blank">
                   <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a
                   href="https://www.linkedin.com/in/rahat-cnits-82177a258/
                 "
+                  target="_blank"
                 >
                   <i class="fa-brands fa-linkedin"></i>
                 </a>
-                <a href="#">
+                <a href="https://github.com/rahatcnits" target="_blank">
                   <i class="fa-brands fa-github"></i>
                 </a>
               </div>
@@ -303,21 +323,28 @@
                 <p>ওয়েব ডিজাইনার</p>
               </div>
               <div class="teams-social">
-                <a href="https://www.facebook.com/profile.php?id=100088819157588">
+                <a
+                  href="https://www.facebook.com/profile.php?id=100088819157588"
+                  target="_blank"
+                >
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
-                <a href="#">
+                <a href="#" target="_blank">
                   <i class="fa-brands fa-instagram"></i>
                 </a>
-                <a href="#">
+                <a
+                  href="https://www.linkedin.com/in/robi-cnits-828a3725b/"
+                  target="_blank"
+                >
                   <i class="fa-brands fa-linkedin"></i>
                 </a>
-                <a href="#">
+                <a href="https://github.com/robiul-islam93" target="_blank">
                   <i class="fa-brands fa-github"></i>
                 </a>
               </div>
             </div>
           </div>
+
           <div class="col-lg-3">
             <div class="teams-card">
               <div class="teams-image">
@@ -330,46 +357,32 @@
               <div class="teams-social">
                 <a
                   href="https://www.facebook.com/profile.php?id=100013801309542"
+                  target="_blank"
                 >
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
-                <a href="#">
+                <a
+                  href="https://instagram.com/adinahmedtamim?igshid=ZDdkNTZiNTM="
+                  target="_blank"
+                >
                   <i class="fa-brands fa-instagram"></i>
                 </a>
-                <a href="#">
+                <a
+                  href="https://www.linkedin.com/in/adin-ahmed-tamim-306682261/"
+                  target="_blank"
+                >
                   <i class="fa-brands fa-linkedin"></i>
                 </a>
-                <a href="#">
+                <a
+                  href="https://www.behance.net/adinahmedtamim"
+                  target="_blank"
+                >
                   <i class="fa-brands fa-behance"></i>
                 </a>
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
-            <div class="teams-card">
-              <div class="teams-image">
-                <img src="./img/teams/rahul-ui-ux-design-profile.png" />
-              </div>
-              <div class="teams-text">
-                <h3>মিরাজুল ইসলাম</h3>
-                <p>UI/UX ডিজাইনার</p>
-              </div>
-              <div class="teams-social">
-                <a href="https://www.facebook.com/mi.rahul.520">
-                  <i class="fa-brands fa-facebook-f"></i>
-                </a>
-                <a href="#">
-                  <i class="fa-brands fa-instagram"></i>
-                </a>
-                <a href="#">
-                  <i class="fa-brands fa-linkedin"></i>
-                </a>
-                <a href="#">
-                  <i class="fa-brands fa-behance"></i>
-                </a>
-              </div>
-            </div>
-          </div>
+
           <div class="col-lg-3">
             <div class="teams-card">
               <div class="teams-image">
@@ -380,16 +393,45 @@
                 <p>গ্রাফিক্স ডিজাইনার</p>
               </div>
               <div class="teams-social">
-                <a href="https://www.facebook.com/sabihatabassum.orthy">
+                <a
+                  href="https://www.facebook.com/sabihatabassum.orthy"
+                  target="_blank"
+                >
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
-                <a href="#">
+                <a href="#" target="_blank">
                   <i class="fa-brands fa-instagram"></i>
                 </a>
-                <a href="#">
+                <a href="#" target="_blank">
                   <i class="fa-brands fa-linkedin"></i>
                 </a>
-                <a href="#">
+                <a href="#" target="_blank">
+                  <i class="fa-brands fa-behance"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3">
+            <div class="teams-card">
+              <div class="teams-image">
+                <img src="./img/teams/rahul-ui-ux-design-profile.png" />
+              </div>
+              <div class="teams-text">
+                <h3>মিরাজুল ইসলাম</h3>
+                <p>UI/UX ডিজাইনার</p>
+              </div>
+              <div class="teams-social">
+                <a href="https://www.facebook.com/mi.rahul.520" target="_blank">
+                  <i class="fa-brands fa-facebook-f"></i>
+                </a>
+                <a href="#" target="_blank">
+                  <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="#" target="_blank">
+                  <i class="fa-brands fa-linkedin"></i>
+                </a>
+                <a href="#" target="_blank">
                   <i class="fa-brands fa-behance"></i>
                 </a>
               </div>
