--- a/contact.html
+++ b/contact.html
@@ -87,9 +87,9 @@
             <li class="nav-item">
               <a class="nav-link" href="./about.html">আমাদের সম্পর্কে</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="#footer-contact">কোর্সসমূহ</a>
-            </li>
+            </li> -->
             <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
