--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
             <li class="nav-item">
               <a class="nav-link" href="./about.html">আমাদের সম্পর্কে</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="#internship-course">কোর্সসমূহ</a>
-            </li>
+            </li> -->
           </ul>
           <a class="course-btn" href="./contact.html">যোগাযোগ</a>
         </div>
