--- a/contact.html
+++ b/contact.html
@@ -192,7 +192,7 @@
                   placeholder="বিস্তারিত..."
                   class="form-control"
                 ></textarea>
-                <div class="contact-form-btn">
+                <div class="contact-form-btn text-center">
                   <button
                     type="submit"
                     class="cnt-frm-btn"
