--- a/index.html
+++ b/index.html
@@ -1009,9 +1009,7 @@
             <div class="work-process-card text-center">
               <img src="./icons/concept-icon.png" alt="" class="pb-3" />
               <h5>কনসেপ্ট ডেভেলপমেন্ট</h5>
-              <p>
-                একটি সুন্দর কনসেপ্ট মনোমুগ্ধকর<br />ডিজাইনের পূর্বশর্ত<br />
-              </p>
+              <p>একটি সুন্দর কনসেপ্ট মনোমুগ্ধকর ডিজাইনের পূর্বশর্ত<br /></p>
             </div>
           </div>
           <div class="col-sm-3">
@@ -1019,8 +1017,8 @@
               <img src="./icons/planning-icon.png" alt="" class="pb-3" />
               <h5>প্ল্যানিং ও প্রসেসিং</h5>
               <p>
-                কনসেপ্টের পরে, আমরা সম্ভাব্য সর্বোত্তম <br />
-                উপায়ে কাজটি সম্পন্ন করার জন্য প্ল্যান করি
+                কনসেপ্টের পরে, আমরা সম্ভাব্য সর্বোত্তম উপায়ে কাজটি সম্পন্ন করার
+                জন্য প্ল্যান করি
               </p>
             </div>
           </div>
@@ -1029,8 +1027,8 @@
               <img src="./icons/research-icon.png" alt="" class="pb-3" />
               <h5>রিসার্চ ও আইডিয়া জেনারেট</h5>
               <p>
-                রিসার্চ প্রসেসিং এর মাধ্যমে আমরা<br />সর্বোত্তম পন্থা বের করি
-                কাজ করার<br />
+                রিসার্চ প্রসেসিং এর মাধ্যমে আমরা সর্বোত্তম পন্থা বের করি কাজ
+                করার<br />
               </p>
             </div>
           </div>
@@ -1039,8 +1037,8 @@
               <img src="./icons/result-icon.png" alt="" class="pb-3" />
               <h5>এক্সিকিউট ও রেজাল্ট</h5>
               <p>
-                ডেভেলপ করার পর সকল প্রজেক্ট এক্সিকিউট<br />করে বেস্ট রেজাল্ট
-                আনয়ন করা হয়
+                ডেভেলপ করার পর সকল প্রজেক্ট এক্সিকিউট করে বেস্ট রেজাল্ট আনয়ন করা
+                হয়
               </p>
             </div>
           </div>
